<resources>
    <string name="app_name">Go Robo!</string>
    <string name="am_menun_main_settings">Configuração</string>
    <string name="title_activity_kit1">kit1</string>
    <string name="am_menun_main_save_project">Salvar Projeto</string>
    <string name="am_menun_main_load_project">Carregar Projeto</string>
    <string name="am_menun_main_reset_project">Reniciar Projeto</string>
    <string name="am_menun_main_run_project">Executar</string>
    <string name="am_menun_main_debug_project">Depurar</string>
    <string name="am_menun_main_bluetooth">Conectar Bluetooth</string>
    <string name="title_activity_in_hungria">InHungriaActivity</string>
    <string name="title_activity_at_chess">AtChessActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
